Revise portfolio metadata and project details
Updated portfolio details, including title, description, and keywords. Enhanced project descriptions and added GitHub links for portfolio items.

--- a/portfolio.html
+++ b/portfolio.html
@@ -4,18 +4,18 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Portfolio - Reagan Ochola | Data Analytics & MEL Specialist</title>
-  <meta name="description" content="Portfolio of Reagan Ochola - Data Analytics & MEL Specialist specializing in agricultural data, Power BI dashboards, and quantitative analysis for development organizations.">
-  <meta name="keywords" content="Data Analytics, MEL, Agriculture, Power BI, SQL, Quantitative Analysis, Kenya, East Africa">
+  <title>Portfolio - Reagan Ochola | Strategic MEL Leader (9 yrs) • Power BI • SQL • Python</title>
+  <meta name="description" content="Portfolio of Reagan Ochola – 9 years designing MEL frameworks for multi-country donor programmes, Power BI + SQL automation, 50+ staff, 15 k+ farmers, 40 % faster processing.">
+  <meta name="keywords" content="MEL, Power BI, SQL, Python, Agriculture, Kenya, East Africa, Monitoring Evaluation Learning, GitHub Repositories, Data Analytics, USAID MEL 2024, Google BI 2025">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
-  <!-- Fonts -->
-  <link href="https://fonts.googleapis.com " rel="preconnect">
-  <link href="https://fonts.gstatic.com " rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital ,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com" rel="preconnect">
+  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -26,25 +26,13 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: FolioOne
-  * Template URL: https://bootstrapmade.com/folioone-bootstrap-portfolio-website-template/ 
-  * Updated: Aug 23 2025 with Bootstrap v5.3.7
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/ 
-  ======================================================== -->
 </head>
 
 <body class="portfolio-page">
 
+  <!-- =======  Header  ======= -->
   <header id="header" class="header d-flex align-items-center light-background sticky-top">
     <div class="container position-relative d-flex align-items-center justify-content-between">
-
-      <!-- <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
-      <img src="assets/img/logo.webp" alt="">
-      <h1 class="sitename">FolioOne</h1> 
-    </a> -->
 
       <nav id="navmenu" class="navmenu">
         <ul>
@@ -83,17 +71,20 @@
       </div>
 
     </div>
-  </header>
+  </header><!-- /Header -->
 
   <main class="main">
 
-    <!-- Portfolio Section -->
+    <!-- =======  Portfolio Section  ======= -->
     <section id="portfolio" class="portfolio section">
 
-      <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Portfolio</h2>
-        <p>Transforming agricultural data into actionable intelligence through MEL frameworks, Power BI dashboards, and quantitative analysis across East Africa.</p>
+        <p>
+          9 years designing MEL frameworks for multi-country donor programmes.
+          Power-BI + SQL automation cut reporting TAT <strong>50 %</strong> and data-processing time <strong>40 %</strong>
+          while managing <strong>50+ MEL officers</strong> across Kenya, Rwanda & Tanzania.
+        </p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -108,8 +99,10 @@
           </ul><!-- End Portfolio Filters -->
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="300">
+
+            <!-- 1️⃣ MSME Manufacturing Study -->
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-mel filter-research">
-              <div class="portfolio-card">
+              <div class="portfolio-card h-100">
                 <div class="portfolio-img">
                   <img src="assets/img/portfolio/portfolio-1.webp" alt="MSME Manufacturing Analysis" class="img-fluid">
                   <div class="portfolio-overlay">
@@ -118,78 +111,90 @@
                   </div>
                 </div>
                 <div class="portfolio-info">
-                  <h4>MEL Quantitative Case Study</h4>
-                  <p>Kenya MSME Manufacturing Analysis - 5,016 firms</p>
-                  <div class="portfolio-tags">
-                    <span>MEL</span>
-                    <span>Quantitative Analysis</span>
+                  <h4>Kenya MSME Manufacturing Analysis</h4>
+                  <p>5 016 firms, 11 277 jobs, 39.8 % female-owned employment, 8.1 % training-efficiency gain.</p>
+                  <div class="portfolio-tags"><span>Power BI</span><span>SQL</span><span>Python</span></div>
+                  <div class="repo-links mt-2">
+                    <a href="https://github.com/Ocholar/mel-case-study-kenya" target="_blank" class="btn btn-sm btn-outline-primary">
+                      <i class="bi bi-github"></i> View Code
+                    </a>
                   </div>
                 </div>
               </div>
             </div>
 
+            <!-- 2️⃣ East-Africa Maize Yield Insights -->
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-agriculture filter-dashboard">
-              <div class="portfolio-card">
+              <div class="portfolio-card h-100">
                 <div class="portfolio-img">
                   <img src="assets/img/portfolio/portfolio-2.webp" alt="Maize Yield Dashboard" class="img-fluid">
                   <div class="portfolio-overlay">
                     <a href="assets/img/portfolio/portfolio-2.webp" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
-                    <a href="#" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                    <a href="https://github.com/Ocholar/East_Africa_Maize_Yield_Insights" class="portfolio-details-link"><i class="bi bi-link"></i></a>
                   </div>
                 </div>
                 <div class="portfolio-info">
-                  <h4>East Africa Maize Yield Insights</h4>
-                  <p>Interactive dashboard for 18,000+ farmers across Kenya, Rwanda, Tanzania</p>
-                  <div class="portfolio-tags">
-                    <span>Power BI</span>
-                    <span>Agriculture</span>
+                  <h4>East-Africa Maize Yield Insights</h4>
+                  <p>Interactive Power BI dashboard tracking 18 000+ farmers (Kenya, Rwanda, Tanzania).</p>
+                  <div class="portfolio-tags"><span>Power BI</span><span>Agriculture</span></div>
+                  <div class="repo-links mt-2">
+                    <a href="https://github.com/Ocholar/East_Africa_Maize_Yield_Insights" target="_blank" class="btn btn-sm btn-outline-primary">
+                      <i class="bi bi-github"></i> View Code
+                    </a>
                   </div>
                 </div>
               </div>
             </div>
 
+            <!-- 3️⃣ AgroImageryTimeline -->
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-agriculture filter-research">
-              <div class="portfolio-card">
+              <div class="portfolio-card h-100">
                 <div class="portfolio-img">
-                  <img src="assets/img/portfolio/portfolio-3.webp" alt="Agricultural Imagery Analysis" class="img-fluid">
+                  <img src="assets/img/portfolio/portfolio-3.webp" alt="AgroImageryTimeline" class="img-fluid">
                   <div class="portfolio-overlay">
                     <a href="assets/img/portfolio/portfolio-3.webp" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
-                    <a href="#" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                    <a href="https://github.com/Ocholar/AgroImageryTimeline" class="portfolio-details-link"><i class="bi bi-link"></i></a>
                   </div>
                 </div>
                 <div class="portfolio-info">
                   <h4>AgroImageryTimeline</h4>
-                  <p>SQL + Python analysis of 85,000+ field images for maize crop monitoring</p>
-                  <div class="portfolio-tags">
-                    <span>Python</span>
-                    <span>SQL</span>
+                  <p>SQL + Python pipeline analysing 85 000+ geotagged field images for maize-crop monitoring.</p>
+                  <div class="portfolio-tags"><span>Python</span><span>SQL</span><span>Geospatial</span></div>
+                  <div class="repo-links mt-2">
+                    <a href="https://github.com/Ocholar/AgroImageryTimeline" target="_blank" class="btn btn-sm btn-outline-primary">
+                      <i class="bi bi-github"></i> View Code
+                    </a>
                   </div>
                 </div>
               </div>
             </div>
 
+            <!-- 4️⃣ AgroDashboard (Plotly Dash) -->
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-dashboard filter-agriculture">
-              <div class="portfolio-card">
+              <div class="portfolio-card h-100">
                 <div class="portfolio-img">
                   <img src="assets/img/portfolio/portfolio-4.webp" alt="AgroDashboard" class="img-fluid">
                   <div class="portfolio-overlay">
                     <a href="assets/img/portfolio/portfolio-4.webp" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
-                    <a href="#" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                    <a href="https://github.com/Ocholar/AgroDashboard" class="portfolio-details-link"><i class="bi bi-link"></i></a>
                   </div>
                 </div>
                 <div class="portfolio-info">
                   <h4>AgroDashboard</h4>
-                  <p>Plotly Dash visualization for maize yield across East Africa with geospatial clustering</p>
-                  <div class="portfolio-tags">
-                    <span>Plotly Dash</span>
-                    <span>Geospatial</span>
+                  <p>Plotly Dash web-app with geospatial clustering for real-time maize-yield analytics.</p>
+                  <div class="portfolio-tags"><span>Plotly Dash</span><span>Geospatial</span></div>
+                  <div class="repo-links mt-2">
+                    <a href="https://github.com/Ocholar/AgroDashboard" target="_blank" class="btn btn-sm btn-outline-primary">
+                      <i class="bi bi-github"></i> View Code
+                    </a>
                   </div>
                 </div>
               </div>
             </div>
 
+            <!-- 5️⃣ Field Data Collection System -->
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-mel filter-agriculture">
-              <div class="portfolio-card">
+              <div class="portfolio-card h-100">
                 <div class="portfolio-img">
                   <img src="assets/img/portfolio/portfolio-5.webp" alt="Field Data Collection" class="img-fluid">
                   <div class="portfolio-overlay">
@@ -199,17 +204,15 @@
                 </div>
                 <div class="portfolio-info">
                   <h4>Field Data Collection System</h4>
-                  <p>Managed 50+ field officers across Mt. Kenya Region with >95% data accuracy</p>
-                  <div class="portfolio-tags">
-                    <span>MEL</span>
-                    <span>Field Operations</span>
-                  </div>
+                  <p>Managed 50+ field officers across Mt. Kenya Region; achieved &gt;95 % data accuracy via CommCare & Kobo.</p>
+                  <div class="portfolio-tags"><span>MEL</span><span>CommCare</span><span>Kobo</span></div>
                 </div>
               </div>
             </div>
 
+            <!-- 6️⃣ Farmer Performance Dashboard -->
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-dashboard filter-mel">
-              <div class="portfolio-card">
+              <div class="portfolio-card h-100">
                 <div class="portfolio-img">
                   <img src="assets/img/portfolio/portfolio-6.webp" alt="Power BI Dashboard" class="img-fluid">
                   <div class="portfolio-overlay">
@@ -219,58 +222,49 @@
                 </div>
                 <div class="portfolio-info">
                   <h4>Farmer Performance Dashboard</h4>
-                  <p>Real-time tracking of crop adoption, repayment rates, and farmer outcomes</p>
-                  <div class="portfolio-tags">
-                    <span>Power BI</span>
-                    <span>Dashboard</span>
-                  </div>
+                  <p>Real-time Power BI tracker for crop adoption, repayment rates & farmer outcomes.</p>
+                  <div class="portfolio-tags"><span>Power BI</span><span>Dashboard</span></div>
                 </div>
               </div>
             </div>
-          </div><!-- End Portfolio Items Container -->
 
+          </div><!-- /isotope-container -->
         </div>
 
         <div class="text-center mt-5" data-aos="fade-up" data-aos-delay="400">
-          <a href="https://github.com/Ocholar" class="btn btn-primary">View All Projects on GitHub</a>
+          <a href="https://github.com/Ocholar" target="_blank" class="btn btn-primary">
+            Explore 9-yr MEL Portfolio on GitHub
+          </a>
         </div>
 
       </div>
-
     </section><!-- /Portfolio Section -->
 
   </main>
 
+  <!-- =======  Footer  ======= -->
   <footer id="footer" class="footer">
-
     <div class="container">
-      <div class="copyright text-center ">
+      <div class="copyright text-center">
         <p>© <span>Copyright</span> <strong class="px-1 sitename">FolioOne</strong> <span>All Rights Reserved<br></span></p>
       </div>
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-twitter-x"></i></a>
-        <a href=""><i class="bi bi-facebook"></i></a>
-        <a href=""><i class="bi bi-instagram"></i></a>
+        <a href="#"><i class="bi bi-twitter-x"></i></a>
+        <a href="#"><i class="bi bi-facebook"></i></a>
+        <a href="#"><i class="bi bi-instagram"></i></a>
         <a href="https://www.linkedin.com/in/reagan-ochola-aba10927"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/  -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/ ">BootstrapMade</a>
+        Certifications: USAID MEL 2024 · Google BI 2025 · AI-for-MEL 2025<br>
+        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
+  </footer><!-- /Footer -->
 
-  </footer>
-
-  <!-- Scroll Top -->
+  <!-- Scroll-Top & Preloader & JS -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-
-  <!-- Preloader -->
   <div id="preloader"></div>
 
-  <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
@@ -281,8 +275,6 @@
   <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-
-  <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
 
 </body>
