Revise resume content and metadata for clarity
Updated resume details and structure, enhancing clarity and relevance of information. Improved metadata for better SEO and added certifications.

--- a/resume.html
+++ b/resume.html
@@ -4,18 +4,18 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Resume - Reagan Ochola | Data Analytics & MEL Specialist</title>
-  <meta name="description" content="Resume of Reagan Ochola - Experienced Data Analytics & MEL Specialist with 8+ years in agricultural development, Power BI dashboards, and quantitative analysis.">
-  <meta name="keywords" content="MEL, Data Analytics, Agriculture, Power BI, SQL, Resume, Kenya, East Africa">
+  <title>Resume - Reagan Ochola | Strategic MEL Leader (9 yrs) • Power BI • SQL • Python</title>
+  <meta name="description" content="Resume of Reagan Ochola – 9 years designing MEL frameworks for multi-country donor programmes, Power BI + SQL automation, 50+ staff, 15 k+ farmers, 40 % faster processing.">
+  <meta name="keywords" content="MEL, Power BI, SQL, Python, Agriculture, Kenya, East Africa, Monitoring Evaluation Learning, GitHub Repositories, Data Analytics, Google BI 2025, AI-for-MEL 2025">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
-  <!-- Fonts -->
-  <link href="https://fonts.googleapis.com " rel="preconnect">
-  <link href="https://fonts.gstatic.com " rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital ,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com" rel="preconnect">
+  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -26,25 +26,13 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: FolioOne
-  * Template URL: https://bootstrapmade.com/folioone-bootstrap-portfolio-website-template/ 
-  * Updated: Aug 23 2025 with Bootstrap v5.3.7
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/ 
-  ======================================================== -->
 </head>
 
 <body class="resume-page">
 
+  <!-- ======= Header ======= -->
   <header id="header" class="header d-flex align-items-center light-background sticky-top">
     <div class="container position-relative d-flex align-items-center justify-content-between">
-
-      <!-- <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
-      <img src="assets/img/logo.webp" alt="">
-      <h1 class="sitename">FolioOne</h1> 
-    </a> -->
 
       <nav id="navmenu" class="navmenu">
         <ul>
@@ -83,17 +71,20 @@
       </div>
 
     </div>
-  </header>
+  </header><!-- /Header -->
 
   <main class="main">
 
-    <!-- Resume Section -->
+    <!-- ======= Resume Section ======= -->
     <section id="resume" class="resume section">
 
-      <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
-        <p>Experienced Data Analytics & MEL Specialist with 8+ years transforming agricultural data into actionable intelligence across East Africa.</p>
+        <p>
+          Strategic MEL leader with <strong>9 years</strong> designing robust monitoring, evaluation & learning frameworks
+          for multi-country donor-funded programmes.  Power-BI + SQL automation cut reporting TAT <strong>50 %</strong>
+          and data-processing time <strong>40 %</strong> while managing <strong>50+ MEL officers</strong> across Kenya.  
+        </p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -101,141 +92,108 @@
         <div class="row">
           <div class="col-lg-6">
 
-            <!-- Education Section -->
-            <div class="resume-item" data-aos="fade-up">
+            <!-- ===== Education ===== -->
+            <div class="resume-item">
               <h3 class="resume-title">Education</h3>
-
               <div class="resume-content">
-                <article class="education-item">
-                  <h4>Master of Science</h4>
-                  <h5>2015 - 2017</h5>
-                  <p class="institution"><em>Jomo Kenyatta University of Agriculture and Technology (JKUAT)</em></p>
-                  <p>Leadership & Capacity Building focus</p>
+                <article>
+                  <h4>M.Sc. Project Management</h4>
+                  <h5>2015 – 2017</h5>
+                  <p><em>Jomo Kenyatta University of Agriculture & Technology</em></p>
+                  <p>Coursework: Data Analysis · Project Planning · Monitoring & Evaluation</p>
                 </article>
-
-                <article class="education-item">
-                  <h4>Bachelor of Science</h4>
-                  <h5>2010 - 2014</h5>
-                  <p class="institution"><em>Egerton University, Kenya</em></p>
-                  <p>Leadership & Capacity Building</p>
+                <article>
+                  <h4>B.Sc. Community Development</h4>
+                  <h5>2010 – 2014</h5>
+                  <p><em>Egerton University, Kenya</em></p>
+                  <p>Coursework: Statistics · Research Methods · Agricultural Extension</p>
                 </article>
               </div>
-            </div><!-- End Education Section -->
+            </div><!-- /Education -->
 
-            <!-- Professional Skills Section -->
+            <!-- ===== Skills ===== -->
             <div class="resume-item skills-animation" data-aos="fade-up">
               <h3 class="resume-title">Professional Skills</h3>
-
               <div class="resume-content">
                 <div class="skill-item">
                   <h4>Power BI & Data Visualization</h4>
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
+                  <div class="progress"><div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div></div>
                 </div>
-
                 <div class="skill-item">
                   <h4>SQL & Database Management</h4>
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
+                  <div class="progress"><div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div></div>
                 </div>
-
-                <div class="skill-item">
-                  <h4>Advanced Excel & Data Analysis</h4>
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                </div>
-
                 <div class="skill-item">
                   <h4>Python for Data Analysis</h4>
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
+                  <div class="progress"><div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div></div>
                 </div>
-
                 <div class="skill-item">
-                  <h4>MEL & Field Operations</h4>
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
+                  <h4>MEL Framework Design</h4>
+                  <div class="progress"><div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div></div>
                 </div>
-
                 <div class="skill-item">
-                  <h4>Leadership & Capacity Building</h4>
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
+                  <h4>Advanced Excel & SPSS</h4>
+                  <div class="progress"><div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div></div>
                 </div>
               </div>
-            </div><!-- End Professional Skills Section -->
+            </div><!-- /Skills -->
           </div>
 
+
           <div class="col-lg-6">
-            <!-- Experience Section -->
+            <!-- ===== Experience ===== -->
             <div class="resume-item" data-aos="fade-up" data-aos-delay="100">
               <h3 class="resume-title">Professional Experience</h3>
-
               <div class="resume-content">
-                <article class="experience-item">
-                  <h4>MEL Team Lead</h4>
-                  <h5>Jan 2023 - Present</h5>
-                  <p class="company"><em>One Acre Fund, Mt. Kenya Region</em></p>
+
+                <article>
+                  <h4>MEL Team Lead – One Acre Fund</h4>
+                  <h5>Jan 2023 – Present  |  Mt. Kenya Region (Kenya, Rwanda, Tanzania)</h5>
                   <ul>
-                    <li>Led field data collection teams of 50 officers across diverse agricultural regions, ensuring >95% data accuracy</li>
-                    <li>Designed and rolled out data validation frameworks that cut survey errors by 35%, strengthening farmer performance tracking</li>
-                    <li>Built interactive Power BI dashboards that allowed leadership to monitor crop adoption, repayment rates, and farmer outcomes in real time</li>
-                    <li>Coordinated weekly data review meetings with field teams and senior managers, translating technical data findings into clear operational decisions</li>
-                    <li>Conducted back-checks and spot audits that identified systemic gaps, leading to improved farmer support strategies</li>
-                    <li>Mentored MEL officers on advanced Excel, SQL basics, and dashboard interpretation, raising internal capacity for data-driven decision-making</li>
+                    <li>Designed & maintained interactive <strong>Power BI dashboards</strong> that consolidated complex regional data, cutting reporting turnaround <strong>50 %</strong> and boosting data quality for programme decisions.</li>
+                    <li>Integrated <strong>SQL + Power BI</strong> for real-time agricultural performance analytics, reducing data-processing time <strong>40 %</strong> and powering adaptive management across 3 countries.</li>
+                    <li>Established Data-Governance Protocols and standardised workflows for <strong>50+ MEL officers</strong>, ensuring audit-ready data integrity aligned to donor MEL frameworks.</li>
+                    <li>Developed SQL-based validation tools that automated data-cleaning, significantly raising accuracy & reliability for evidence-based programme monitoring.</li>
+                    <li>Delivered multi-year performance analyses identifying yield trends & operational bottlenecks, guiding strategic investment and programme scale-up for <strong>15 000+ farmers</strong>.</li>
+                    <li>Produced visual analytics & strategic briefs that informed donor funding priorities and optimised programme outcomes.</li>
                   </ul>
                 </article>
 
-                <article class="experience-item">
-                  <h4>Junior Enumerator Officer</h4>
-                  <h5>Feb 2019 - Dec 2022</h5>
-                  <p class="company"><em>One Acre Fund, Njoro, Nakuru, Kenya</em></p>
+                <article>
+                  <h4>Junior MEL Enumerator – One Acre Fund</h4>
+                  <h5>Feb 2019 – Dec 2022  |  Njoro, Nakuru, Kenya</h5>
                   <ul>
-                    <li>Conducted field surveys on core MEL programs: Maize Crop Mix and Planting Compliance, Potatoes, Vegetables, Trees and Agroforestry, Market surveys</li>
-                    <li>Maintained high data quality standards across diverse agricultural data collection activities</li>
-                    <li>Supported field operations in rural agricultural communities across Kenya</li>
+                    <li>Collected, cleaned & validated <strong>15 000+ farmer records</strong> using CommCare & Kobo Toolbox, forming the backbone of programme performance tracking.</li>
+                    <li>Ran regular data audits that lifted reliability <strong>20 %</strong>, enabling timely corrective actions and high-quality MEL systems.</li>
+                    <li>Trained field agents on digital data collection and ethical data management, building sustainable MEL capacity.</li>
                   </ul>
                 </article>
 
-                <article class="experience-item">
-                  <h4>Graduate Researcher</h4>
-                  <h5>Apr 2016 - May 2018</h5>
-                  <p class="company"><em>RUFORUM at Egerton University, Kenya</em></p>
+                <article>
+                  <h4>M&E Graduate Researcher – RUFORUM</h4>
+                  <h5>Apr 2016 – May 2018  |  Egerton University, Kenya</h5>
                   <ul>
-                    <li>Conducted field research on project implementation in rural farming communities, focusing on farmer adoption of new practices</li>
-                    <li>Produced reports that highlighted bottlenecks in project rollout, informing donor-funded program adjustments</li>
-                    <li>Applied quantitative and qualitative methods to assess project outcomes and recommend scalable improvements</li>
+                    <li>Analysed complex survey data (SPSS, Excel) for university-led agricultural programmes across <strong>5 East-African countries</strong>, ensuring rigorous quality & evidence-based insights.</li>
+                    <li>Authored policy briefs highlighting innovation-adoption trends, supporting ministerial-level decision making.</li>
+                    <li>Developed standardised monitoring templates that improved reporting consistency across diverse research teams.</li>
                   </ul>
                 </article>
+
               </div>
-            </div><!-- End Experience Section -->
+            </div><!-- /Experience -->
 
-            <!-- Certifications Section -->
+
+            <!-- ===== Certifications ===== -->
             <div class="resume-item" data-aos="fade-up" data-aos-delay="200">
               <h3 class="resume-title">Certifications & Training</h3>
-
               <div class="resume-content">
-                <article class="certification-item">
-                  <h4>BCG - Introduction to Data for Decision Makers Job Simulation</h4>
-                  <h5>Sep 2025</h5>
-                  <p class="issuer"><em>Forage</em></p>
-                  <p>Credential ID: FwidRNkse64Enfyrs</p>
-                </article>
-
-                <article class="certification-item">
-                  <h4>Career Essentials in Data Analysis by Microsoft and LinkedIn</h4>
-                  <h5>Sep 2025</h5>
-                  <p class="issuer"><em>Microsoft</em></p>
-                  <p>Data Analysis, Data Analytics</p>
-                </article>
+                <article><h4>Google Business Intelligence Certificate</h4><h5>2025  |  Coursera</h5></article>
+                <article><h4>Artificial Intelligence for MEL</h4><h5>2025  |  Alison</h5></article>
+                <article><h4>Career Essentials in Data Analysis</h4><h5>2025  |  Microsoft & LinkedIn</h5></article>
+                <article><h4>BCG Data for Decision Makers Job Simulation</h4><h5>2025  |  Forage</h5></article>
               </div>
-            </div><!-- End Certifications Section -->
+            </div><!-- /Certifications -->
+
           </div>
         </div>
 
@@ -245,36 +203,29 @@
 
   </main>
 
+  <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
-
     <div class="container">
-      <div class="copyright text-center ">
+      <div class="copyright text-center">
         <p>© <span>Copyright</span> <strong class="px-1 sitename">FolioOne</strong> <span>All Rights Reserved<br></span></p>
       </div>
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-twitter-x"></i></a>
-        <a href=""><i class="bi bi-facebook"></i></a>
-        <a href=""><i class="bi bi-instagram"></i></a>
+        <a href="#"><i class="bi bi-twitter-x"></i></a>
+        <a href="#"><i class="bi bi-facebook"></i></a>
+        <a href="#"><i class="bi bi-instagram"></i></a>
         <a href="https://www.linkedin.com/in/reagan-ochola-aba10927"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/  -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/ ">BootstrapMade</a>
+        Certifications: Google BI 2025 · AI-for-MEL 2025 · Microsoft Data Analysis 2025 · BCG Forage 2025<br>
+        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
+  </footer><!-- /Footer -->
 
-  </footer>
-
-  <!-- Scroll Top -->
+  <!-- Scroll-Top & JS -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-
-  <!-- Preloader -->
   <div id="preloader"></div>
 
-  <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
@@ -285,10 +236,7 @@
   <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-
-  <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
 
 </body>
-
 </html>
